...
                context,
              ).pushReplacementNamed('/cadastro-atividade'),
            ),
            SizedBox(height: 70),
            // BUTTON 2
            _linkButton(
              'Ver Kanban',
              () => Navigator.of(
                context,
              ).pushReplacementNamed('/kanban'),
            ),
            SizedBox(height: 70),
            // BUTTON 3
            _linkButton('Gerar relatório', () async {
              try {
                final caminho = await exportarTarefasCSV();
                ScaffoldMessenger.of(context).showSnackBar(
                  SnackBar(
                    content: Text('CSV exportado para: $caminho'),
                  ),
...
