...
}

class _CadastrarAtividadeState extends State<CadastrarAtividade> {
  TextEditingController atividadeNomeController =
      TextEditingController();
  String _atividadeNome = '';
  String? _prioridade = 'Baixa';

  void initState() {
    super.initState();
  }

  Future<void> criarTask() async {
...
                          borderSide: BorderSide(
                            color: Color(0xff333333),
                            width: 1.5,
                          ),
                        ),
                      ),
                      items: ['Baixa', 'Média', 'Alta']
                          .map(
                            (p) => DropdownMenuItem(
                              child: Text(p),
                              value: p,
                            ),
                          )
...
